--- a/CFTO.html
+++ b/CFTO.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>赛博算命</title>
+    <title>CyberFortuneTellingOnline</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         :root {
